...
    }
    
}

extension JTDetailVC {
    func initUI() {
        self.navigationItem.title = "Detail"
        self.view.backgroundColor = .systemBackground
        
        self.tableView.tableFooterView = UIView()
        self.tableView.register(JTDetailCommentCell.self, forCellReuseIdentifier: JTDetailCommentCell.identifier)
        self.tableView.rx.setDelegate(self).disposed(by: rx.disposeBag)
        self.view.addSubview(self.tableView)
...
        self.tableView.tableHeaderView = header
        self.header = header
        
        self.searchController = UISearchController(searchResultsController: nil)
        self.searchController?.obscuresBackgroundDuringPresentation = false
        self.searchController?.delegate = self
        self.searchController?.searchBar.placeholder = "Please input to search comment"
        self.navigationItem.searchController = self.searchController
        
        self.navigationController?.navigationBar.backgroundColor = .systemBackground

    }
    
...
