...
        }
    }
}

extension JTPostListVC {
    func initUI() {
        self.navigationItem.title = "Posts"
        self.view.backgroundColor = .systemBackground
        
        self.tableView.tableFooterView = UIView()
        self.tableView.register(JTPostListCell.self, forCellReuseIdentifier: JTPostListCell.identifier)
        self.tableView.rx.setDelegate(self).disposed(by: rx.disposeBag)
        self.view.addSubview(self.tableView)
...
        guard self.navigationItem.searchController == nil else {
            return
        }
        self.searchController = UISearchController(searchResultsController: nil)
        self.searchController?.obscuresBackgroundDuringPresentation = false
        self.searchController?.delegate = self
        self.searchController?.searchBar.placeholder = "Please input to search post"
        self.navigationItem.searchController = self.searchController
        
        self.navigationController?.navigationBar.backgroundColor = .systemBackground

    }
    
...
