//
//  JTUITestKeys.swift
//  JourneyTest
//
//  Created by Alex on 25/11/21.
//

import Foundation

struct JTUITestKeys {
    static let keys: JTUITestKeys = JTUITestKeys()
    
    private init(){}
    
    let postNormalFirstCell: String = "List-Post-Normal-FirstCell"
    let detailNormalFirstCell: String = "Detail-Normal-FirstCell"
    let detailCellBodyLabel: String = "Detail-Cell-BodyLabel"
    let detailCellNameLabel: String = "Detail-Cell-NameLabel"
    
}
